--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 clap = { version = "4.4.8", features = ["derive"] }
 once_cell = "1.18.0"
 colored = "2.0"
+pipeline_types = { path = "../pipeline-types/" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", features = ["blocking", "stream"] }
