--- a/crates/pipeline-types/Cargo.toml
+++ b/crates/pipeline-types/Cargo.toml
@@ -17,4 +17,4 @@ serde_json = { version = "1.0.103", features = ["raw_value"] }
 anyhow = { version = "1.0.57", features = ["backtrace"] }
 log = "0.4.20"
 utoipa = "4.1"
-
+proptest-derive = { version = "0.4.0", optional = true }
