--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -13,3 +13,8 @@ pipeline_types = { path = "../pipeline-types/" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking", "stream"] }
+indicatif = "0.17.7"
+indicatif-log-bridge = "0.2.2"
+env_logger = "0.10.1"
+log = "0.4.20"
+console = { version = "0.15.7", features = [] }
