--- a/crates/feldera-storage/Cargo.toml
+++ b/crates/feldera-storage/Cargo.toml
@@ -25,9 +25,11 @@ moka = { version = "0.12", features = ["future"] }
 sysinfo = { version = "0.30" }
 rlimit = "0.10.1"
 serde = { version = "1.0", features = ["derive"] }
+futures = "0.3.30"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.150"
+nix = { version = "0.27.1", features = ["uio"] }
 
 [dev-dependencies]
 rand = "0.8.5"
