--- a/crates/feldera-storage/Cargo.toml
+++ b/crates/feldera-storage/Cargo.toml
@@ -24,6 +24,7 @@ log = { version = "0.4", features = [] }
 rlimit = "0.10.1"
 serde = { version = "1.0", features = ["derive"] }
 futures = "0.3.30"
+sysinfo = "0.30.5"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.150"
