--- a/crates/sqllib/Cargo.toml
+++ b/crates/sqllib/Cargo.toml
@@ -33,6 +33,7 @@ num-traits = "0.2"
 flate2 = "1.0.28"
 metrics = { version = "0.23.0" }
 lazy_static = "1.4.0"
+internment = { version = "0.8.5", features = ["arc"] }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
